--- a/canvas3/index.html
+++ b/canvas3/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <canvas id="canvas"></canvas>
-   <input type="text" id="textInput" placeholder="Type something..." value="Type something...">
+   <input type="text" id="textInput" placeholder="Type something..." value="Type something">
    <script src="script.js"></script>
 </body>
 </html>
